Fixed overflow of links

--- a/src/sections/Contact/Contact.module.scss
+++ b/src/sections/Contact/Contact.module.scss
@@ -27,4 +27,5 @@
   white-space: nowrap;
   margin-right: auto;
   overflow: hidden;
+  max-width: 100%;
 }
